--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.0.1",
   "description": "Prompts a yes/no question.",
   "author": "Gilles De Waele",
+  "keywords": [
+    "prompt",
+    "confirm",
+    "question",
+    "yes no"
+  ],
   "license": "MIT",
   "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {},
   "devDependencies": {
     "eslint": "4.11.0"
